--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Pronto para sair do Armário raul?</strong>
+    <strong>Meu primeiro aplicativo</strong>
     <p>Raul gayzão, Henrique super homem sexual<a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
